Compress CSS and Stylists updated for correct alignments

--- a/public/stylesheets/boxed.css
+++ b/public/stylesheets/boxed.css
@@ -1,114 +1,31 @@
-#mask {
-	background: orange url(/images/overlay/mask_gradient_1800.png) no-repeat;
-	background-position:50% -200px;
-}
-
+#mask{background:orange url(/images/overlay/mask_gradient_1800.png) no-repeat;background-position:50% -200px;}
 /* general settings for both scrollables */
-div.items {	
-	width:20000em;	
-	position:absolute;
-	clear:both;
-}
-
+div.items{width:20000em;position:absolute;clear:both;}
 /* next/prev buttons */
-div.naviButton {
-	background-image:url(/images/scrollable/hori_large.png);
-	width:30px;
-	height:30px;
-	float:left;
-	margin-top:55px;
-}
-
-div.naviButton:hover  		{ background-position:-30px 0; }
-div.naviButton:active  		{ background-position:-60px 0; }
-div.nextPage 							{ background-position: 0 -30px; clear:right; }
-div.nextPage:hover 				{ background-position:-30px -30px; }
-div.nextPage:active 			{ background-position:-60px -30px; } 
-div.naviButton.disabled 	{ visibility:hidden;}
-
+div.naviButton{background-image:url(/images/scrollable/hori_large.png);width:30px;height:30px;float:left;margin-top:55px;}
+div.naviButton:hover{background-position:-30px 0;}
+div.naviButton:active{background-position:-60px 0;}
+div.nextPage{background-position:0 -30px;clear:right;}
+div.nextPage:hover{background-position:-30px -30px;}
+div.nextPage:active{background-position:-60px -30px;}
+div.naviButton.disabled{visibility:hidden;}
 /* the thumbnail scrollable */
-#thumbnails {
-	position:absolute;
-	overflow:hidden;	 	
-	float:left;	
-	width: 602px;	
-	height:140px;
-	background: white url(/images/h150.png) repeat-x;
-	outline:1px solid #333;
-	-moz-outline-radius:4px;
-	top: 30px;
-}
-
-#thumbnails div.items div {
-	padding:5px;
-	float:left;		
-}
-
+#thumbnails{position:absolute;overflow:hidden;float:left;width:602px;height:140px;background:white url(/images/h150.png) repeat-x;outline:1px solid #333;-moz-outline-radius:4px;top:30px;}
+#thumbnails div.items div{padding:5px;float:left;}
 /* overlay scrollable */
-#images {	
-	position:absolute;
-	overflow:hidden;
-	margin:50px;
-	width:557px;
-	height:400px;	
-}
-
+#images{position:absolute;overflow:hidden;margin:50px;width:557px;height:400px;}
 /* the tooltip */
-#images div.items div.info {
-	float:none;
-	background:#333;
-	color:#fff;
-	font-size:13px;
-	margin-top:-137px;
-	padding:5px 75px;
-	height:125px;
-	display:none;
-	width:490px;
-}
-
+#images div.items div.info{float:none;background:#333;color:#fff;font-size:13px;margin-top:-137px;padding:5px 75px;height:125px;display:none;width:490px;}
 /* single image */
-#images div.items div {
-	float:left;
-	width:557px;
-	height:400px;
-	margin-right:30px;
-}
-
-#images div.items div.info h3 {
-	color:#cde;
-	margin-top:10px;
-}
-
+#images div.items div{float:left;width:557px;height:400px;margin-right:30px;}
+#images div.items div.info h3{color:#cde;margin-top:10px;}
 /* override button style on the overlay */
-#box div.naviButton {
-	position:absolute;
-	bottom:33px;
-	left:50px;
-}
-
-#box div.nextPage {
-	left:580px;
-}
-
+#box div.naviButton{position:absolute;bottom:33px;left:50px;}
+#box div.nextPage{left:580px;}
 /* box styling */
-#box {
-	background-image:url(/images/overlay/black.png);
-	width:656px;
-	height:524px;
-	position: absolute;
-	display:none;
-}
-
+#box{background-image:url(/images/overlay/black.png);width:656px;height:524px;position:absolute;display:none;}
 /* 
-	image is contained on the overlay background image. 
-	the closing button is thus just a transparent container. 
+image is contained on the overlay background image. 
+the closing button is thus just a transparent container. 
 */
-#box div.close {
-	background:none;
-	position:absolute;
-	left:8px;
-	top:8px;
-	cursor:pointer;
-	height:35px;
-	width:35px;
-}
+#box div.close{background:none;position:absolute;left:8px;top:8px;cursor:pointer;height:35px;width:35px;}
