--- a/public/stylesheets/pictures.css
+++ b/public/stylesheets/pictures.css
@@ -1,67 +1,11 @@
-#gallery div.scrollable{
-	position:relative;
-	overflow:hidden;
-	display: block;
-	width: 600px;
-	height:392px;
-	margin:-50px auto 0;
-	border:1px solid #ccc;
-	background:url(/images/h300.png) repeat-x transparent;
-	filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true', sizingMethod='scale', src='/images/h300.png');
-}
-
-.scrollable .items {
-	width:20000em;
-	position:absolute;
-	clear:both;
-}
-
+#gallery div.scrollable{position:relative;overflow:hidden;display:block;width:600px;height:392px;margin:-50px auto 0;border:1px solid #ccc;background:url(/images/h300.png) repeat-x transparent;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true',sizingMethod='scale',src='/images/h300.png');}
+.scrollable .items{width:20000em;position:absolute;clear:both;}
 /* single scrollable item */
-.scrollable img.gallery {
-	height: 330px;
-	width: 442px;
-	float:left;
-	margin: 37px 80px 0;
-	background-color:#fff;
-	padding:2px;
-	border:1px solid #ccc;
-	cursor:pointer;	
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-}
-
+.scrollable img.gallery{height:330px;width:442px;float:left;margin:37px 80px 0;background-color:#fff;padding:2px;border:1px solid #ccc;cursor:pointer;-moz-border-radius:4px;-webkit-border-radius:4px;}
 /* Scrollable Interface Buttons */
-#gallery a.prev_photo, a.next_photo {
-	display:block;
-	width: 30px;
-	height:30px;
-	position: absolute;
-	margin-top:150px;
-	top: 145px;
-	cursor:pointer;
-	text-indent:-9999px;
-	background-image: url(/images/scrollable/hori_large.png);
-	_background-image: url(/images/scrollable/hori_large.gif);
-	z-index: 9999;
-}
-
-
-#gallery a.prev_photo {
-	background-position: -30px 0;
-	margin-left: 27px;
-}
-
-#gallery a.next_photo {
-	background-position: 0 -30px;
-	z-index: 9999;
-	margin-left: 550px;
-}
-
+#gallery a.prev_photo,a.next_photo{display:block;width:30px;height:30px;position:absolute;margin-top:150px;top:145px;cursor:pointer;text-indent:-9999px;background-image:url(/images/scrollable/hori_large.png);_background-image:url(/images/scrollable/hori_large.gif);z-index:9999;}
+#gallery a.prev_photo{background-position:-30px 0;margin-left:27px;}
+#gallery a.next_photo{background-position:0 -30px;z-index:9999;margin-left:550px;}
 /* mouseover state */
-#gallery a.prev_photo:hover, a.next_photo:hover {
-	background-position:-90px 0;		
-}
-
-#gallery a.disabled {
-	visibility:hidden !important;		
-}
+#gallery a.prev_photo:hover,a.next_photo:hover{background-position:-90px 0;}
+#gallery a.disabled{visibility:hidden !important;}
