--- a/public/stylesheets/services.css
+++ b/public/stylesheets/services.css
@@ -1,41 +1,7 @@
-#stylist_levels {
-	width: 350px;
-	border-left: 2px solid #FCFEFD;
-	border-right: 2px solid #FCFEFD;
-	border-bottom: 2px solid #FCFEFD;
-}
-
-#stylist_levels th {
-	color: #333;
-	background:transparent url(/images/th_bkg.jpg) repeat-x scroll 0 0 !important;
-}
-
-#stylist_levels input {
-	text-align: center;
-}
-
-
-#services_list {
-	border-width: 1px 1px 1px 1px;
-	border-spacing: 2px;
-	border-style: solid solid solid solid;
-	border-color: white white white white;
-	border-collapse: collapse;
-} 
-
-#services_list td.price {
-	padding:3px !important;
-	text-align:center;
-	width:77px !important;
-}
-
-#services_list td.admin_link {
-	text-align: center;
-	padding-top: 9px !important;
-}
-
-#services_list th {
-	text-align: center;
-	border-top: 2px solid white;
-	border-bottom: 2px solid white;
-}
+#stylist_levels{width:350px;border-left:2px solid #FCFEFD;border-right:2px solid #FCFEFD;border-bottom:2px solid #FCFEFD;}
+#stylist_levels th{color:#333;background:transparent url(/images/th_bkg.jpg) repeat-x scroll 0 0 !important;}
+#stylist_levels input{text-align:center;}
+#services_list{border-width:1px 1px 1px 1px;border-spacing:2px;border-style:solid solid solid solid;border-color:white white white white;border-collapse:collapse;}
+#services_list td.price{padding:3px !important;text-align:center;width:77px !important;}
+#services_list td.admin_link{text-align:center;padding-top:9px !important;}
+#services_list th{text-align:center;border-top:2px solid white;border-bottom:2px solid white;}
